# investment_tracker

./: .coveragerc  .gitignore  BACKEND_ARCHITECTURE_DOCUMENTATION.md  Backend_Implementation_Gaps_Analysis.md  CIRCULAR_IMPORT_FIX_PLAN.md  COMPREHENSIVE_MIGRATION_TASKS.md  CashFlowDebug_3PG.txt  CashFlowDebug_3PG_RealIRR.txt  DESIGN_GUIDELINES.md  DividendTaxDebug.txt  FUND_MIGRATION_TASKS.md  PROJECT_CONTEXT.md  Property.xlsx  README.md  REFACTOR_TAX_PAYMENT_EVENTS.md  UNIT_PURCHASE_BUG_ANALYSIS.md  add_fy_debt_cost_events.py  add_risk_free_rates.py  add_sample_risk_free_rates.py  alembic.ini  analyze_after_tax_irr.py  analyze_tax_differences.py  check_events.py  check_interest_charges.py  check_schema.py  cleanup_and_import_real_rates.py  cleanup_december_tax_payments.py  cleanup_duplicate_events.py  cleanup_duplicates.py  cleanup_tax.py  create_domain_events_table.py  create_tables.py  database_config.py  debug_after_tax_irr.py  debug_after_tax_present_values.py  debug_api_entity_creation.py  debug_api_issue.py  debug_average_calculation.py  debug_average_calculation_detailed.py  debug_average_equity_issue.py  (+87 more)
.github/: ci-config.yml
alembic/: env.py
data/: investment_tracker.db.backup  investment_tracker.db.backup.1754752762  investment_tracker.db.broken.1752418889
database/: README.md  check_database_schema.py  init_database.py  simple_db_test.py
docs/: AI_AGENT_COLLABORATION_GUIDELINES.md  API_REFACTOR_SPEC.md  AVERAGE_EQUITY_CALCULATION_SPEC.md  BACKEND_TESTING_SUITE_SPEC.md  CENTRALIZED_API_IMPLEMENTATION_GUIDE.md  CI_SETUP.md  COMPANIES_UI_API_CONTRACT.md  COMPANIES_UI_BACKEND_SPEC.md  COMPANIES_UI_FRONTEND_SPEC.md  COMPONENT_ARCHITECTURE_REFACTOR.md  CREATE_ONLY_CLEANUP_SPEC.md  DATABASE_CENTRALIZATION_SPEC.md  DATA_INTEGRITY_AND_VALIDATION_SPEC.md  DESIGN_GUIDELINES.md  DIRECTORY_TREE.md  DISTRIBUTION_METHOD_CONSOLIDATION_SPEC.md  DOCUMENTATION_AUDIT_SUMMARY.md  END_STATE_FILE_DIRECTORY_STRUCTURE.md  END_STATE_TESTING_FILE_DIRECTORY.md  ENHANCED_SEARCH_BAR_SPEC.md  ENTERPRISE_FORM_ARCHITECTURE_SPEC.md  ENTERPRISE_GRADE_REFRESH_ARCHITECTURE.md  (+55 more)
migrations/: env.py
(+1658 files in other folders)
