[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-tracker"
version = "1.0.0"
description = "Investment tracking system with tax calculations and IRR analysis"
authors = [{name = "Investment Tracker Team"}]
requires-python = ">=3.9" 