[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-tracker"
version = "1.0.0"
description = "Investment tracking system with tax calculations and IRR analysis"
authors = [{name = "Investment Tracker Team"}]
requires-python = ">=3.9" 

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = [
  "tests"
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2